--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "4sq"]
 	path = 4sq
 	url = https://github.com/Constantine-Fry/das-quadrat.git
+[submodule "AlamoFire"]
+	path = AlamoFire
+	url = https://github.com/Alamofire/Alamofire.git
