--- a/Crave App/Info.plist
+++ b/Crave App/Info.plist
@@ -43,6 +43,8 @@
 			<string>cravefoodfinder://foursquare</string>
 		</dict>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Location data is necessary to find venues around you</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
