restructured findVenues() completely, read through the examples for das-quadrat and some of the included code for that and swiftyjson
created way to stop program from moving on from closure before searchtask starts according to this stackoverflow:

http://stackoverflow.com/questions/28163069/swift-how-to-wait-for-callback-to-finish-before-exiting-function

not sure if that will work or not

-need to work out assignment to dictionary. please finish this today so you can get started on parsing descriptions.

--- a/Crave App/Info.plist
+++ b/Crave App/Info.plist
@@ -43,8 +43,8 @@
 			<string>cravefoodfinder://foursquare</string>
 		</dict>
 	</array>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Location data is necessary to find venues around you</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need your location to find food near you!</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
